mini adjustement to document webui component, some refactoring